# imrw

./: .gitignore  README.md  pyproject.toml
src/im_io/: __init__.py
src/imio/: ops.py
src/imrw/: __init__.py  ops.py
src/kimio/: ops.py
tests/: test_ops.py
