[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "imrw"
version = "0.1.2"
description = "Minimal image I/O library wrapping Pillow and numpy."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pillow",
]

[tool.setuptools.packages.find]
where = ["src"]
